# SecGo

./: CONTRIBUTING.md  DESIGN.md  GEMINI.md  IMPLEMENTATION.md  README.md  README_zh.md  constitution.md  todo.md
.github/workflows/: ci.yml  release.yml
.trae/documents/: Alipay Auto-Confirm On Checkout.md  Create todo.md for Version 0.1.0.md  Plan for Version 0.2.0_ I18n, Dual Backup DB, and Advanced Sync.md  Revised Plan_ Manager-Centric Peer-to-Peer Architecture.md
Kiosk/: .env_template  README.md  pubspec.yaml
Kiosk/android/app/: build.gradle.kts
Kiosk/assets/branding/: secgo-kiosk-icon.base64
Kiosk/integration_test/: app_test.dart
Kiosk/ios/Runner/: Info.plist
Kiosk/lib/: main.dart
Kiosk/lib/db/: database_helper.dart
Kiosk/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb
Kiosk/lib/models/: order.dart  product.g.dart
Kiosk/lib/screens/: main_screen.dart  manual_barcode_dialog.dart  no_barcode_products_dialog.dart  payment_screen.dart  pin_input_dialog.dart  pin_setup_screen.dart  settings_screen.dart
Kiosk/lib/services/: alipay_payment_watch_service.dart  android_launcher_service.dart  (+7 more)
Kiosk/test/: alipay_amount_parser_test.dart
Manager/: .env_template  CHANGELOG.md  README.md  pubspec.yaml
Manager/images/: .gitkeep
Manager/integration_test/: app_test.dart
Manager/lib/: main.dart
Server/: Cargo.toml  README.md  vending.db
Server/assets/branding/: secgo-server-icon.base64
Server/src/: api.rs  db.rs  main.rs  models.rs
assets/branding/: secgo-lockup.base64
(+41 files in other folders)
