[package]
name = "Server"
description = "Vending Machine Server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
reqwest = { version = "0.13.1", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
